--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "shopapp-redux",
   "version": "0.1.0",
+  "homepage": "https://songcengiz.github.io/shopapp-react",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -31,11 +32,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server":"npx json-server --watch public/db.json --port=3000"
+    "server": "npx json-server --watch public/db.json --port=3000"
   },
   "eslintConfig": {
     "extends": [
@@ -54,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
