--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "npx json-server --watch public/db.json --port=3000"
+    "start:server": "npx json-server --watch public/db.json"
   },
   "eslintConfig": {
     "extends": [
