change package.json file

--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": " npm run start:server && react-scripts start",
+    "build": " npm run start:server && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start:server": "npx json-server --watch public/db.json"
